deploy/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend-deployment
spec:
  selector:
    matchLabels:
      app: krakend
  replicas: 1
  template:
    metadata:
      labels:
        app: krakend
    spec:
      volumes:
      - name: configs
        configMap: 
          name: krakend-configs
      containers:
      - name: krakend
        image: devopsfaith/krakend:1.3.0
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: configs
            mountPath: /etc/krakend
        imagePullPolicy: IfNotPresent
        command: [ "/usr/bin/krakend" ]
        args: [ "run", "-d", "-c", "/etc/krakend/krakend.json", "-p", "8080" ]
